--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
     "transform-es2015-arrow-functions",
     "transform-es2015-block-scoped-functions",
     ["transform-es2015-classes", { "loose": true }],
+    "transform-object-assign",
     "transform-es2015-object-super",
     "transform-es2015-shorthand-properties",
     ["transform-es2015-computed-properties", { "loose": true }],
