--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-plugin-transform-es2015-unicode-regex": "^6.5.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
+    "babel-plugin-transform-object-assign": "^6.8.0",
     "cross-env": "^1.0.7",
     "eslint": "^1.10.2",
     "eslint-config-airbnb": "1.0.2",
