--- a/package.json
+++ b/package.json
@@ -1,73 +1,66 @@
 {
   "name": "redux-action-enhancer",
   "version": "0.4.0",
-  "description": "Action enhancer middleware for Redux.",
+  "description": "Action enhancer middleware for redux.",
   "main": "lib/index.js",
+  "module": "es/index.js",
   "jsnext:main": "es/index.js",
-  "files": [
-    "lib",
-    "es",
-    "src",
-    "dist"
-  ],
-  "scripts": {
-    "clean": "rimraf lib dist es",
-    "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min && npm run build:es",
-    "prepublish": "npm run clean && npm run test && npm run build",
-    "posttest": "npm run lint",
-    "lint": "eslint src test",
-    "test": "cross-env BABEL_ENV=commonjs mocha --compilers js:babel-core/register --reporter spec test/*.js",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=development webpack",
-    "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=production webpack"
-  },
+  "homepage": "https://github.com/bdwain/redux-action-enhancer",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bdwain/redux-action-enhancer.git"
+    "url": "git+https://github.com/bdwain/redux-action-enhancer.git"
   },
-  "homepage": "https://github.com/bdwain/redux-action-enhancer",
+  "bugs": {
+    "url": "https://github.com/bdwain/redux-action-enhancer/issues"
+  },
+  "files": [
+    "dist",
+    "es",
+    "lib",
+    "src"
+  ],
+  "scripts": {
+    "clear": "rimraf lib dist es",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i src/index.js -o dist/redux-action-enhancer.js",
+    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i src/index.js -o dist/redux-action-enhancer.min.js",
+    "build": "yarn build:commonjs && yarn build:es && yarn build:umd && yarn build:umd:min",
+    "prebuild": "yarn run clear",
+    "prepublishOnly": "yarn build"
+  },
   "keywords": [
     "redux",
-    "action-enhancer",
     "middleware",
-    "redux-middleware",
-    "flux"
+    "action enhancer",
+    "dependency injection",
+    "DI"
+  ],
+  "tags": [
+    "redux",
+    "middleware",
+    "action enhancer",
+    "dependency injection",
+    "DI"
   ],
   "author": "Bryan Wain <bryandwain@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.6.5",
-    "babel-eslint": "^5.0.0-beta4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-check-es2015-constants": "^6.6.5",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.6.5",
-    "babel-plugin-transform-es2015-block-scoping": "^6.6.5",
-    "babel-plugin-transform-es2015-classes": "^6.6.5",
-    "babel-plugin-transform-es2015-computed-properties": "^6.6.5",
-    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
-    "babel-plugin-transform-es2015-for-of": "^6.6.0",
-    "babel-plugin-transform-es2015-function-name": "^6.5.0",
-    "babel-plugin-transform-es2015-literals": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.6.5",
-    "babel-plugin-transform-es2015-object-super": "^6.6.5",
-    "babel-plugin-transform-es2015-parameters": "^6.6.5",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
-    "babel-plugin-transform-es2015-spread": "^6.6.5",
-    "babel-plugin-transform-es2015-sticky-regex": "^6.5.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
-    "babel-plugin-transform-es2015-unicode-regex": "^6.5.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
-    "babel-plugin-transform-es3-property-literals": "^6.5.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "cross-env": "^1.0.7",
-    "eslint": "^1.10.2",
-    "eslint-config-airbnb": "1.0.2",
-    "eslint-plugin-react": "^4.1.0",
-    "mocha": "^2.2.5",
-    "rimraf": "^2.5.2",
-    "webpack": "^1.12.14"
-  }
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.3.15",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
+    "babel-plugin-transform-es3-property-literals": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "cross-env": "^5.0.5",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^2.0.1"
+  },
+  "dependencies": {}
 }
