--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
+  "types": "index.d.ts",
   "homepage": "https://github.com/bdwain/redux-action-enhancer",
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "cross-env": "^5.0.5",
+    "redux": "^4.0.5",
     "rimraf": "^2.6.2",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
@@ -62,5 +64,8 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "redux": "^4.0.5"
+  }
 }
