--- a/package.json
+++ b/package.json
@@ -47,24 +47,20 @@
   "author": "Bryan Wain <bryandwain@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "^6.3.15",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
-    "babel-plugin-transform-es3-property-literals": "6.22.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "cross-env": "^7.0.2",
     "redux": "^4.0.5",
     "rimraf": "^3.0.2",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup": "^2.7.3",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "rollup-plugin-terser": "^5.3.0"
+  },
   "peerDependencies": {
     "redux": "^4.0.5"
   }
