--- a/package.json
+++ b/package.json
@@ -57,9 +57,7 @@
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.0.0"
-  },
-  "dependencies": {
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-terser": "^5.3.0"
   },
   "peerDependencies": {
